objects/SAP_Order_Summary__c.object
<CustomObject>
    <fields>
        <fullName>Bill_To_Address_Region__c</fullName>
        <label>Bill To Address Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Street__c</fullName>
        <label>Bill To Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Delivery_Date__c</fullName>
        <label>Expected Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inco_Terms_Description__c</fullName>
        <label>Inco Terms Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Customer_Date__c</fullName>
        <label>Original Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Region__c</fullName>
        <label>Ship To Address Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Street__c</fullName>
        <label>Ship To Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_Region__c</fullName>
        <label>Sold To Address Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_Street__c</fullName>
        <label>Sold To Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fxReplacementToAddress__c</fullName>
        <description>This is the concated address for replacement address</description>
        <formula>Replacement_Address_Street__c &amp; &quot;, &quot; &amp; Replacement_Address_City__c &amp; &quot;, &quot; &amp; Replacement_Address_Region__c &amp; &quot; &quot; &amp; Replacement_Address_Postal_Code__c &amp; &quot; &quot; &amp; Replacement_Address_Country__c</formula>
        <label>Replacement Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Country__c</fullName>
        <label>Bill To Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Geocode__c</fullName>
        <description>mapped from: BillToAddressLatitude &amp; BillToAddressLongitude</description>
        <label>Bill To Address Geocode</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Count_of_rejected_items__c</fullName>
        <label>Count of rejected items</label>
        <summaryFilterItems>
            <field>SAP_Order_Items__c.Line_Is_Rejected__c</field>
            <operation>notEqual</operation>
            <value/>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>SAP_Order_Items__c.isRemoved__c</field>
            <operation>equals</operation>
            <value>False</value>
        </summaryFilterItems>
        <summaryForeignKey>SAP_Order_Items__c.PKI_Order_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Path_Date_Order_Shipped__c</fullName>
        <description>Calculated in SQL, as the 1st date at which this value appeared.</description>
        <inlineHelpText>Calculated in SQL, as the 1st date at which this value appeared.</inlineHelpText>
        <label>Path Date Order Shipped</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Path_Date_Order_Started__c</fullName>
        <description>Calculated in SQL, as the 1st date at which this value appeared.</description>
        <inlineHelpText>Calculated in SQL, as the 1st date at which this value appeared.</inlineHelpText>
        <label>Path Date Order Started</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Customer_Id__c</fullName>
        <description>mapped from: ReplacementCustomerId</description>
        <label>Replacement Customer Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Replacement_to_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Mapped using the Replacement to Customer Id and an L.FLOW</description>
        <label>Replacement to Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>PKI Order Summary (Replacement to Customer)</relationshipLabel>
        <relationshipName>PKI_Order_Summary3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Country__c</fullName>
        <label>Ship To Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Geocode__c</fullName>
        <description>mapped from: ShipToAddressLongitude &amp; ShipToAddressLatitude</description>
        <label>Ship To Address Geocode</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_Country__c</fullName>
        <label>Sold To Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Count_of_unblocked_items__c</fullName>
        <description>this totals the items that are not blocked (its complicated to count where not null)</description>
        <label>Count of unblocked items</label>
        <summaryFilterItems>
            <field>SAP_Order_Items__c.fxIsBlocked__c</field>
            <operation>equals</operation>
            <value>0</value>
        </summaryFilterItems>
        <summaryForeignKey>SAP_Order_Items__c.PKI_Order_Summary__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Payment_Term_Description__c</fullName>
        <label>Payment Term Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_City__c</fullName>
        <description>mapped from: ReplacementAddressCity</description>
        <label>Replacement Address City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path_Date_Global_Delivery__c</fullName>
        <description>Calculated in SQL, as the 1st date at which this value appeared.</description>
        <inlineHelpText>Calculated in SQL, as the 1st date at which this value appeared.</inlineHelpText>
        <label>Path Date Global Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Replacement_Customer_Name__c</fullName>
        <label>Replacement Customer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Block_Description__c</fullName>
        <description>mapped from: orderDeliverBlockDescription</description>
        <label>Delivery Block Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_Region__c</fullName>
        <description>mapped from: ReplacementAddressRegion</description>
        <label>Replacement Address Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_Street__c</fullName>
        <description>mapped from: ReplacementAddressStreet1</description>
        <label>Replacement Address Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Actual_Global_Delivery_Date__c</fullName>
        <inlineHelpText>Based on delivery information an actual date when PKI order was ready at manufacturing site or at crossdoc DC for multi site order</inlineHelpText>
        <label>Actual Mfg. Commit Date(GD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bill_To_Address_Postal_Code__c</fullName>
        <label>Bill To Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_Country__c</fullName>
        <description>mapped from: ReplacementAddressCountry</description>
        <label>Replacement Address Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_Geocode__c</fullName>
        <description>mapped from: ReplacementAddressLatitude &amp; ReplacementAddressLongitude</description>
        <label>Replacement Address Geocode</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Ship_To_Address_Postal_Code__c</fullName>
        <label>Ship To Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Address_Postal_Code__c</fullName>
        <label>Sold To Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Global_Delivery_Date__c</fullName>
        <description>The Global Delivery Date</description>
        <inlineHelpText>Estimated date when manufacturing will be ready with Customer order. In case of multi manufacturing site order the date is when customer order will be at the DC or crossdoc.</inlineHelpText>
        <label>Mfg. Commit Date(GD)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Path_Date_Ready_for_Shipping__c</fullName>
        <description>Calculated in SQL, as the 1st date at which this value appeared.</description>
        <inlineHelpText>Calculated in SQL, as the 1st date at which this value appeared.</inlineHelpText>
        <label>Path Date Ready for Shipping</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ultimate_Destination_Country__c</fullName>
        <label>Ultimate Destination Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Clear_to_Global_Delivery__c</fullName>
        <description>The days between these to stages</description>
        <inlineHelpText>The days between these to stages</inlineHelpText>
        <label>Days Clear to Global Delivery</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Ready_to_Ship_to_Shipped__c</fullName>
        <description>The days between these to stages</description>
        <inlineHelpText>The days between these to stages</inlineHelpText>
        <label>Days Ready to Ship to Shipped</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Global_Delivery_Date__c</fullName>
        <label>Original Global Delivery Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Special_Handling_Instructions__c</fullName>
        <description>mapped from; orderSpecialHandlingInstructions</description>
        <label>Special Handling Instructions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Replacement_Address_Postal_Code__c</fullName>
        <description>mapped from: ReplacementAddressPostalCode</description>
        <label>Replacement Address Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Status_Code_Description__c</fullName>
        <description>mapped from: deliveryStatusCodeDescription</description>
        <label>Delivery Status Code Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Days_Global_Delivery_to_Read_to_Ship__c</fullName>
        <description>The days between these to stages</description>
        <inlineHelpText>The days between these to stages</inlineHelpText>
        <label>Days Global Delivery to Read to Ship</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>